packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-11/fixed.js
const node = {
  arguments: [undefined],
};


///
subject = node.arguments[0];
object = subject && subject.object;
